--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,46 @@
   padding: 0;
 }
 
-// TODO
+:root{
+  --gray-30: #F8F8F8;
+  --gray-200: #D7D7D7;
+  --gray-300: #BBBBBB;
+
+  --gray-900: #1A1D23;
+  --pink-500:#FF57B2;
+}
+
+@media(max-width:1080px){
+  html{
+    font-size:93.75%;
+  }
+}
+
+@media(max-width:720px){
+  html{
+    font-size:87.5%;
+  }
+}
+
+body {
+  background: var(--gray-900);
+  color: var(--gray-200);
+  font: 400 1.125rem "Inter", sans-serif;
+  line-height: 1.575rem;
+}
+
+h1 {
+  font: 700 3rem "Inter", sans-serif;
+  color: var(--gray-30);
+}
+
+h2 {
+  font: 700 2.25rem "Inter", sans-serif;
+  color: var(--gray-30);
+}
+
+
+
+
+
+
