--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -23,5 +23,11 @@
   margin-left: 0.5rem;
 }
 
+.lastEditedStyle{
+  font: italic 400 0.875rem "Inter", sans-serif;
+  color: var(--gray-300);
+  margin-top: 1rem;
+}
+
 
 
